# infographic

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  app.js  dashboard.html  docker-compose.yml  index.html  infographic.html  matplotlib-cjk.html  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: pipeline-db-write-gap.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: b042d394006d_add_total_cost_usd_to_pipeline_runs.py  f87e03439726_create_phase1_tables.py
app/: index.html
app/assets/: index-Ci7S6Xdf.js  index-CyQtqoER.css
docs/: dashboard-ui-ux-reference.md  frontend-pages-spec.md  index.html  infographic.html  sotda-comparison.html
frontend/: app.js  index.html  netlify.toml  styles.css
frontend-react/: index.html  package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.tsx  index.css
scripts/: batch_runner.py  download_font.py  schedule_video.py  youtube_auth.py
src/: config.py  main.py
src/activities/: cleanup.py  db_write.py  image_gen.py  pipeline.py  script_gen.py  sheets.py  stubs.py  thumbnail.py  tts.py  video_assembly.py  video_gen.py  youtube_upload.py
src/api/: channels.py  dashboard.py  health.py  pipeline.py  sync.py  system.py
src/channel_configs/: channel_01.yaml  channel_02.yaml
src/models/: __init__.py  channel_config.py  (+5 more)
tests/: conftest.py  test_approve_endpoint.py  test_batch_runner.py  test_content_pipeline_workflow.py  test_dashboard.py  test_db.py  test_db_write_activity.py  test_download_endpoints.py  test_e2e_dryrun.py  test_health.py  test_image_gen.py  test_models_phase2.py  test_multi_channel.py  test_pipeline_integration.py  test_quality_gate.py  test_schedule_video.py  test_script_gen.py  test_sheets_sync.py  test_thumbnail.py  test_tts.py  test_video_assembly.py  test_video_gen.py  test_workers.py  test_youtube_upload.py
(+84 files in other folders)
